@@ -70,7 +70,7 @@ public class DownloadServlet extends JSIDPlay2Servlet {
 			}
 			response.setContentType(getMimeType(getFilenameSuffix(servletParameters.getFilePath())).toString());
 			response.addHeader(CONTENT_DISPOSITION,
-					ATTACHMENT + "; filename=" + URLEncoder.encode(file.getName(), StandardCharsets.UTF_8));
+					ATTACHMENT + "; filename=" + URLEncoder.encode(file.getName(), StandardCharsets.UTF_8.name()));
 			copy(file, response.getOutputStream());
 
 		} catch (Throwable t) {
